--- a/MYTRAVELBLOGED.html
+++ b/MYTRAVELBLOGED.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Blog</title>
+    <link rel="stylesheet" href="GITCSS.css">
 </head>
 <body>
     <h1>SIUUUUUUUUUUUUUU</h1>
+
+
+    <div>
+        <h1> one number </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde officiis vel eveniet cumque repellat, ut tenetur autem consequatur reprehenderit iure nesciunt voluptatibus aperiam assumenda animi sapiente quis hic recusandae.</p>
+    </div>
+    <div>
+        <h1> two number </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde officiis vel eveniet cumque repellat, ut tenetur autem consequatur reprehenderit iure nesciunt voluptatibus aperiam assumenda animi sapiente quis hic recusandae.</p>
+    </div>
+    <div>
+        <h1> three number </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde officiis vel eveniet cumque repellat, ut tenetur autem consequatur reprehenderit iure nesciunt voluptatibus aperiam assumenda animi sapiente quis hic recusandae.</p>
+    </div>
+    <div>
+        <h1> four number </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero unde officiis vel eveniet cumque repellat, ut tenetur autem consequatur reprehenderit iure nesciunt voluptatibus aperiam assumenda animi sapiente quis hic recusandae.</p>
+    </div>
     
 </body>
 </html>
